###### TWE 4.8-1 RELEASED ######
2012-11-09 Sasa Bojanic <sasaboy@together.at>
   # Updated to new TXM (jXPDL) library
   # Now when opening/reopening XPDL file, if possible, JaWE automatically switches to the mode written in XPDL file itself

2012-10-22 Sasa Bojanic <sasaboy@together.at>
   # WfXML component: now actions enabled/disabled depending on selection and in the case of WfXML is connected to Shark engine, depending on Shark's upload/update logic
   # WfXML component: when connected to Shark engine, can't update URL/Name/Description/Version/Status

2012-10-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Tooltip information provided for activity's email configuration (Shark's SMTPEventAuditManager related) 

2012-10-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved GUI for SubFlow activity modeling (actual->formal parameters)

2012-10-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Email configuration section for workflow process element (used with SMTPEventAuditManager). Nice GUI and XPDL validation.

2012-10-17 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to all panels to display tooltip
   # Shark mode: Improved GUI for TaskApplication activity modeling (actual->formal parameters)

2012-10-12 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Introduced validation for Application definitions depending on ToolAgentClass extended attribute value (Shark tool agent dependent validation)
      - Improved GUI (dynamic panel for LDAP and UserGroup tool agents, choice dependent panel logic for Quartz and Scheduler tool agents)
   
2012-10-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved GUI for Application definitions

2012-10-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved validation. Now when validating special extended attributes (for client GUI forms and for SMTPEventAuditManager), 