@@ -10149,10 +10149,17 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
-          <para>Now when opening/reopening XPDL file, if possible, JaWE automatically switches to the mode written in XPDL file itself</para>
+          <para>Now when opening/reopening XPDL file, if possible, JaWE
+          automatically switches to the mode written in XPDL file
+          itself</para>
         </listitem>
 
-        </itemizedlist>
+        <listitem>
+          <para>Property panel for artifacts changed: now panel contains only
+          neccessary properties depending on artifact type (Annotation or
+          DataObject)</para>
+        </listitem>
+      </itemizedlist>
     </section>
 
     <section>
