@@ -1,4 +1,7 @@
 ###### TWE 4.8-1 RELEASED ######
+2012-12-27 Sasa Bojanic <sasaboy@together.at>
+   # Property panel for artifacts changed: now panel contains only neccessary properties depending on artifact type (Annotation or DataObject)
+
 2012-11-09 Sasa Bojanic <sasaboy@together.at>
    # Updated to new TXM (jXPDL) library
    # Now when opening/reopening XPDL file, if possible, JaWE automatically switches to the mode written in XPDL file itself
